<resources>
    <string name="app_name">WE+</string>
    <string name="beranda">Beranda</string>
    <string name="transaksi">Transaksi</string>
    <string name="affiliasi">Affiliasi</string>
    <string name="profil">Profil</string>
    <string name="sampletext">Loli\nKami sudah terproteksi oleh Axa insurance</string>
    <string name="bayartagihanataulainlain">Bayar Tagihan atau lain-lain</string>
    <string name="telusuriweplus">Telusuri WE+</string>
    <string name="promoterbaruuntukkamu">Promo terbaru untuk kamu</string>
    <string name="belipolis">Beli Polis</string>
    <string name="product_asuransi">Product Asuransi</string>
    <string name="product_asuransi_desc">Pilih berbagai asuransi yang tersedia</string>
    <string name="pilihberbagaijenisasuransiyangtersedia">Pilih berbagai jenis asuransi yang tersedia</string>
    <string name="lengkapidatamobilyangdiasuransikan">Lengkapi data mobil yang diasuransikan</string>
    <string name="kategori">Kategori</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="produkfavorit">Produk Favorit</string>
    <string name="selamatdatang">Selamat Datang di WE+</string>
    <string name="rasakanmudahnyamembeliasuransi">Rasakan mudahnya membeli asuransi\ndalam smartphone milik Anda!</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="atau">Atau</string>
    <string name="email">Email</string>
    <string name="katasandi">Kata Sandi</string>
    <string name="lupakatasandi">Lupa Kata Sandi?</string>
    <string name="ataulogindengan">Atau login dengan</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="alamatemail">Alamat Email</string>
    <string name="nomortelepon">Nomor Telepon</string>
    <string name="daftar">Daftar</string>
    <string name="kodeverifikasisudahdikirim">Kode Verifikasi Sudah dikirim !</string>
    <string name="kamitelahmengirimkode">Kami telah mengirim kode verifikasi ke nomor telepon Anda. Masukkan kode untuk memverifikasi perangkat ini.</string>
    <string name="tidakmenerimakode">Tidak menerima kode?</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="profilsaya">Profil Saya</string>
    <string name="ubahprofil">Ubah Profil</string>
    <string name="keluar">Keluar</string>
    <string name="empty_field">Data tidak boleh kosong</string>
    <string name="error_not_valid_email">Email tidak benar</string>
    <string name="masuk">Masuk</string>
    <string name="maafkodesalah">Maaf, kode yang Anda masukkan salah</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="namayangandamasukkan">Nama yang Anda masukkan akan disimpan sebagai kontak</string>
    <string name="simpan">Simpan</string>
    <string name="emailakandigunakanuntukmenerima">Email akan digunakan untuk menerima e-polis yang dibeli</string>
    <string name="emaillengkap">Email Lengkap</string>
    <string name="ubahnamalengkap">Ubah Nama Lengkap</string>
    <string name="ubahalamatemail">Ubah Alamat Email</string>
    <string name="batal">Batal</string>
    <string name="namadanfotoprofil"><![CDATA[Nama & Foto Profil]]></string>
    <string name="aturprofilwe">Atur profil WE+ Anda dengan menambahkan gambar Anda</string>
    <string name="informasipribadi">Informasi Pribadi</string>
    <string name="ubah">Ubah</string>
    <string name="alamatemailuntukmenerima">Alamat email untuk menerima pemberitahuan e-polis yang dibeli</string>
    <string name="sudahterferivikasi">Sudah Terverifikasi</string>
    <string name="nomorponselakandigunakanuntuk">Nomor ponsel akan digunakan untuk masuk, menerima pemberitahuan, dan mengatur ulang kata sandi</string>
    <string name="negara">Negara</string>
    <string name="negaraperjalanan">Klik disini untuk mencari negara perjalanan</string>
    <string name="provinsiperjalanan">Klik disini untuk mencari provinsi perjalanan</string>
    <string name="kotaperjalanan">Klik disini untuk mencari kota perjalanan</string>
    <string name="individual">Individual</string>
    <string name="keluarga">Keluarga</string>
    <string name="lupapassword">Lupa Password?</string>
    <string name="konfirmasitagihanlistrik">Konfirmasi</string>
    <string name="partneryangbekerjasamadenganweplus">Partner yang bekerjasama dengan WE+</string>
    <string name="transaksisaya">Transaksi Saya</string>
    <string name="melihatdaftartransaksiygdilakukan">Melihat Daftar Transaksi yang dilakukan</string>
    <string name="lakukanpembayarandenganmetodepembayaran">Lakukan pembayaran sesuai metode pembayaran</string>
    <string name="mohontunggusebentar">Mohon Tunggu Sebentar</string>
    <string name="sedangmengumpulkandatayangdiperlukan">Sedang mengumpulkan data yang diperlukan</string>
    <string name="konvensional">Konvensional</string>
    <string name="mikroasuransi">Mikro</string>
    <string name="urutkansesuaidatamotor">Urutkan sesuai data motor</string>
    <string name="merk">Merk</string>
    <string name="totallossonly">Total Loss Only</string>
    <string name="idtransaksi">ID Transaksi</string>
    <string name="harga_tagihan">Harga</string>
    <string name="totalharga">Total Harga</string>
    <string name="metodepembayarantagihanlistrik">Metode Pembayaran</string>
    <string name="akanbatalsetelah">Akan batal setelah</string>
    <string name="axacareprotection">AXA Care Protection</string>
    <string name="tagihantokenlistrik">Token Listrik</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="asuransikesehatan">Asuransi Kesehatan</string>
    <string name="urutkansesuaidatakeluarga">Urutkan sesuai data keluarga</string>
    <string name="tagihan">Tagihan</string>
    <string name="bayar">Bayar</string>
    <string name="bayartagihanbpjs">Bayar Bpjs</string>
    <string name="bayartagihanlistrik">Bayar Tagihan Listrik</string>
    <string name="tagihanlistrik">Tagihan Listrik</string>
    <string name="asurasiygdiajukan">Asuransi yang diajukan</string>
    <string name="detailtransaksi">Detail Transaksi</string>
    <string name="listrikpln">Listrik PLN</string>
    <string name="affiliasidarisemuapartner">Affiliasi dari semua partner WE+</string>
    <string name="tab_kontak_klaim">Kontak Klaim</string>
    <string name="tab_bengkel_rekanan">Bengkel Rekanan</string>
    <string name="tab_voucher_discount">Voucher Diskon</string>
    <string name="tab_transaksipembelian">Transaksi</string>
    <string name="tab_promo">Promo</string>
    <string name="tab_riwayat">Riwayat</string>
    <string name="pilihpartnerasuransi">Pilih Partner Asuransi</string>
    <string name="cari">Cari</string>
    <string name="daftarbengkelrekanan">Daftar Bengkel Rekanan</string>
    <string name="memudahkanandamenghubungi">Memudahkan Anda menghubungi bengkel yang tersedia</string>
    <string name="hubungi">Hubungi</string>
    <string name="masukkannamalengkap">Masukkan Nama Lengkap</string>
    <string name="daftarkontaklayananpelangganasuransi">Daftar kontak layanan pelanggan asuransi</string>
    <string name="katasandisekarang">Kata sandi sekarang</string>
    <string name="katasandiygbaru">Kata sandi yang baru</string>
    <string name="ulangikatasandiygbaru">Ulangi kata sandi yang baru</string>
    <string name="produkterbaru">Produk Terbaru</string>
    <string name="jangansampailupamengasuransikan">Jangan sampai lupa mengasuransikan diri Anda!</string>
    <string name="detail">Detail</string>
    <string name="tglkeberangkatan">Tanggal Keberangkatan</string>
    <string name="perokok">Perokok</string>
    <string name="anggotakeluargayangmerokok">Anggota keluarga yang merokok</string>
    <string name="masukkannamapemilikrekening">Masukkan Nama Pemilik Rekening</string>
    <string name="masukkannomorrekening">Masukkan Nomor Rekening</string>
    <string name="masukkankantorcabang">Masukkan Kantor Cabang</string>
    <string name="pilihtanggal">Pilih Tanggal</string>
    <string name="ya">Ya</string>
    <string name="tglkedatangan">Tanggal Kedatangan</string>
    <string name="tipeperjalanan">Tipe Perjalanan</string>
    <string name="pilihjumlahpenumpang">Pilih Jumlah Penumpang</string>
    <string name="pilihjeniskelamin">Pilih Jenis Kelamin</string>
    <string name="pulangpergi">Pulang - Pergi</string>
    <string name="durasiperjalanan">Durasi Perjalanan</string>
    <string name="pilihjenistagihanlistrik">Pilih Jenis Tagihan Listrik</string>
    <string name="pilihjenisbpjs">Pilih Jenis BPJS</string>
    <string name="nomormeter">Nomor Meter/ID Pelanggan</string>
    <string name="nomorvirtualaccountkeluarga">Nomor Virtual Account Keluarga</string>
    <string name="tokenlistrik">Jumlah Nominal Token Listrik</string>
    <string name="destinasiperjalanan">Destinasi Perjalanan</string>
    <string name="asalperjalanan">Asal Perjalanan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="belilagi">Beli Lagi</string>
    <string name="bayarbpjs">Bayar BPJS</string>
    <string name="semuakategori">Semua Kategori</string>
    <string name="asuransiygkamuperlukansemua">Asuransi yang kamu perlukan semua ada di sini!</string>
    <string name="tutup">Tutup</string>
    <string name="detailproduk">Detail Produk</string>
    <string name="ajukansekarang">Ajukan Sekarang</string>
    <string name="filterharga">Filter Harga</string>
    <string name="jumlahpenumpang">Jumlah penumpang</string>
    <string name="jumlahpeserta">Jumlah Peserta</string>
    <string name="pilihbank">Pilih Bank</string>
    <string name="statuspembayaran">Status Pembayaran</string>
    <string name="menunggupembayaran">Menunggu pembayaran</string>
    <string name="biayaproduksiasuransi">Biaya Produksi Asuransi</string>
    <string name="biayaprodukasuransi">Biaya Produk Asuransi</string>
    <string name="biayatokenlistrik">Biaya Token Listrik</string>
    <string name="tgllahir">Tanggal Lahir</string>
    <string name="kembali">Kembali</string>
    <string name="asuransimikro">Asuransi Mikro</string>
    <string name="asuransigeneral">Asuransi General</string>
    <string name="asuransimikroadalah">Asuransi Mikro adalah produk asuransi yang diperuntukkan bagi masyarakan yang memiliki penghasilan rendah, dimana asuransi ini dikemas secara sederhana</string>
    <string name="asuransgeneraladalah">Asuransi General adalah asuransi kendaraan bermotor(motor) yang dipertanggungkan terhadap kerugian/kerusakan total minimal 75% dan lebih ato hilang akibat pencurian, serta tersedia perluasan jaminan seperti: jaminan kecelakann diri pengemudi, pengemudi dan penumpang, kerusuhan huru-hara, dan sebagainya</string>
    <string name="detailpolis">Detail Polis</string>
    <string name="detailtertanggung">Detail Tertanggung</string>
    <string name="namatertanggung">Nama Tertanggung</string>
    <string name="nomoridentitas">Nomor Identitas</string>
    <string name="detialbenefitasuransi">Detail Benefit Asuransi</string>
    <string name="klaimasuransi">Klaim Asuransi</string>
    <string name="hubungiasuransi">Hubungi Asuransi</string>
    <string name="masukkanalamatemailanda">Masukkan alamat email Anda dan kami akan mengirimkan link reset password untuk mengembalikan akun anda.</string>
    <string name="kembalikehalamanlogin">Kembali ke halaman Login</string>
    <string name="katasandiberhasildiubah">Kata Sandi Berhasil diubah!</string>
    <string name="masukkankatasandiyangkamikirimkanke">Masukkan kata sandi yang kami kirimkan ke</string>
    <string name="tidakmenerimakatasandi">Tidak menerima kata sandi?</string>
    <string name="kehalamanlogin">Ke Halaman Login</string>
    <string name="katasanditelahdikirimulang">Kata Sandi telah dikirim ulang,silahkan cek kembali email Anda.</string>
    <string name="terimakasi">Terima Kasih\nSilahkan Cek Halaman Polis</string>
    <string name="untukmelihatstatustransaksi">Untuk melihat status transaksi Polis yang aktif,silahkan cek dari beranda</string>
</resources>