<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/forgotpass_top"
        layout="@layout/view_back"/>

    <TextView
        android:id="@+id/tv_kirim_ulang"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:text="@string/katasanditelahdikirimulang"
        android:textColor="@color/white"
        android:background="@color/yellow"
        android:textStyle="bold"
        android:textSize="@dimen/font_small"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_m"
        android:paddingRight="@dimen/margin_m"
        android:visibility="gone"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/ic_mail_lupa_kata_sandi"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_m"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/katasandiberhasildiubah"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/font_big"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/margin_m"/>
        <TextView
            android:id="@+id/tv_katasandi_ygdikirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkankatasandiyangkamikirimkanke"
            android:textColor="@color/grey_medium"
            android:textStyle="bold"
            android:textSize="@dimen/font_normal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginLeft="@dimen/margin_m"
            android:layout_marginRight="@dimen/margin_m"/>

        <TextView
            android:id="@+id/tdk_menerima_kata_sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tidakmenerimakatasandi"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_normal"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ke_hal_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginLeft="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_big_m"
            android:layout_marginRight="@dimen/margin_m"
            android:background="@drawable/border_red"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/kehalamanlogin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            app:cornerRadius="1mm" />


</LinearLayout>