<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/forgotpass_top"
        layout="@layout/view_back"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/forgotpass_top"
    android:paddingLeft="@dimen/margin_m"
    android:paddingRight="@dimen/margin_m">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/ic_lock"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginRight="@dimen/margin_m"
        android:layout_marginLeft="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lupakatasandi"
        android:textColor="@color/red"
        android:fontFamily="@font/ubuntu_b"
        android:textSize="19sp"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_m"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkanalamatemailanda"
        android:textColor="@color/grey_medium"
        android:fontFamily="@font/ubuntu_r"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_m"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamatemail"
        android:textColor="@color/grey_medium"
        android:fontFamily="@font/ubuntu_r"
        android:textSize="13sp"
        android:lineHeight="14sp"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_m"
        android:layout_marginRight="@dimen/margin_m"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin_m"
        android:layout_marginRight="@dimen/margin_m"
        android:background="@drawable/border_grey"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/ubuntu_r"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="Masukkan alamat email"
        android:textColor="@color/grey_medium"
        tools:ignore="HardcodedText,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotpassword_btn_lanjutkan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_above="@id/btn_lupa_katasandi"
        android:layout_marginLeft="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_m"
        android:background="@drawable/border_red"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lanjutkan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_b"
        android:textSize="14sp"
        app:cornerRadius="1mm" />
</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_bg_border"
        android:layout_above="@+id/forgotpass_btn_to_login"/>

    <TextView
        android:id="@+id/forgotpass_btn_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kembalikehalamanlogin"
        android:layout_alignParentBottom="true"
        android:textColor="@color/blue"
        android:textStyle="normal"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_big"/>

</RelativeLayout>