<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <include layout="@layout/view_back_no_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ubahsandi_til_sandi_skrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/white"
        android:padding="@dimen/margin_m">

        <EditText
            android:id="@+id/ubahsandi_sandi_skrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_r"
            android:inputType="textPassword"
            android:hint="@string/katasandisekarang"
            android:textColor="@color/grey_medium"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ubahsandi_til_sandi_baru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_very_small"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/white"
        android:padding="@dimen/margin_m">

        <EditText
            android:id="@+id/ubahsandi_sandi_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_r"
            android:inputType="textPassword"
            android:hint="@string/katasandiygbaru"
            android:textColor="@color/grey_medium"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ubahsandi_til_ulangi_sandi_baru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_very_small"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/white"
        android:padding="@dimen/margin_m">

        <EditText
            android:id="@+id/ubahsandi_ulangi_sandi_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_r"
            android:inputType="textPassword"
            android:hint="@string/ulangikatasandiygbaru"
            android:textColor="@color/grey_medium"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ubahsandi_btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:background="@drawable/border_red"
        android:fontFamily="@font/ubuntu_b"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_normal" />

</LinearLayout>